Migrate from JUnit 4 to JUnit 5